# incident-triage

./: CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  TRADEMARKS.md  incident-triage  incident_triage.py  install.sh  pyproject.toml  requirements.txt  schema.md
.claude/commands/: triage.md
.github/workflows/: ci.yml  publish.yml
packaging/homebrew/: incident-triage.rb
skills/: SKILL.md
tests/: test_correlation.py
tests/fixtures/: restart-alert.json  restart-resolved-report.json  sample-alert.json  sample-report.json  storage-alert.json  storage-noise-report.json
