[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-triage"
version = "1.3.1"
description = "Deterministic Kubernetes incident triage: correlate an alert to cluster state, build a causation chain, emit a prioritised fix plan. No LLM in the loop."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Olawale Ogundiran" }]
keywords = ["kubernetes", "sre", "incident", "triage", "observability", "reliability", "kubectl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/GreenerPlatform/incident-triage"
Source = "https://github.com/GreenerPlatform/incident-triage"
Issues = "https://github.com/GreenerPlatform/incident-triage/issues"

[project.scripts]
incident-triage = "incident_triage:main"

[tool.setuptools]
py-modules = ["incident_triage"]
